Consumer rebalance listener invokes C function pointers